--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react-i18next": "^11.18.1",
     "react-icons": "^4.4.0",
     "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "vite": "^3.0.4",
     "web-vitals": "^2.1.4"
   },
